# UrbanPulseMapping-msclaw

./: .env.example  .gitignore  .npmrc  BUILD_SPEC.md  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/ai-pipeline/: Dockerfile  README.md  pyproject.toml
apps/ai-pipeline/scripts/: test_e2e.py
apps/ai-pipeline/src/: config.py  consumer.py  main.py  pipeline.py
apps/ai-pipeline/src/analyzers/: health.py  measurements.py  site.py  species.py
apps/ai-pipeline/src/clients/: llm.py  plantnet.py  storage.py
apps/ai-pipeline/src/prompts/: health_assessment.txt  measurement_estimation.txt  site_assessment.txt  species_validation.txt
apps/ai-pipeline/src/utils/: geocode.py  quality.py
apps/ai-pipeline/tests/: conftest.py  test_config.py  test_consumer.py  test_e2e_real_photos.py  test_health_analyzer.py  test_llm_client.py  test_measurement_analyzer.py  test_pipeline_integration.py  test_plantnet_client.py  test_quality.py  test_species_analyzer.py  test_storage_client.py
apps/ai-pipeline/tests/fixtures/tree-photos/: README.md
apps/api/: CLAUDE.md  package.json
apps/api/src/: app.ts  index.ts
apps/mobile/: CLAUDE.md  app.json  eas.json  hermes-polyfill.js  index.js  metro.config.js  package.json  tailwind.config.js
apps/mobile/app/: _layout.tsx  index.tsx
apps/mobile/components/: CooldownBadge.tsx  (+17 more)
docs/: AI_INTEGRATION_PLAN.md  LEVEL1_INSPECTION_SPEC.md  PHASE2_BUILD_SPEC.md  PHASE2_QA_REPORT.md  QA_REPORT.md  STARTUP.md  VERIFICATION_REPORT.md
scripts/: clear-data.ts  seed-trees.ts  seed-zones.ts  setup-dev.sh  test-api.sh
(+66 files in other folders)
